--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,12 @@
 }
 body{
   background-color: var(--Cream);
-  /* height: 100svh; */
 }
 main{
   width: 350px;
   margin: 2rem auto;
   background-color: var(--White);
+  /* height: 100vh; */
   /* display: flex;
   flex-direction: column; */
   /* border: 1px solid black; */
