--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,10 @@ body{
 }
 main{
   width: 350px;
-  margin: 2rem auto;
   background-color: var(--White);
-  /* height: 100vh; */
   /* display: flex;
   flex-direction: column; */
+  margin: 50% auto;
   /* border: 1px solid black; */
   border-radius: 10px;
 }
