--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@ main{
   background-color: var(--White);
   display: flex;
   flex-direction: column;
-  /* justify-items: center; */
-  margin: auto;
+  justify-items: center;
+  margin: 10% auto;
   align-items: center;
   /* border: 1px solid black; */
   border-radius: 10px;
