Worked on 1024px screen size

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   --Cream: hsl(30, 38%, 92%);
   --Very-dark-blue: hsl(212, 21%, 14%);
   --Dark-grayish-blue: hsl(228, 12%, 48%);
+  --Dark-green: hsl(120, 97%, 11%);
   --White: hsl(0, 0%, 100%);
 }
 *{
@@ -22,6 +23,13 @@ main{
   margin: 5rem auto;
   border-radius: 10px;
 }
+@media screen and (min-width:1024px) {
+  main{
+    display: flex;
+    width: 600px;
+    margin: 4rem auto;
+  }
+}
 .desktop-img{
   display: none;
 }
@@ -30,8 +38,23 @@ main{
   border-start-start-radius:10px ;
   border-start-end-radius:10px ;
 }
+
+@media screen and (min-width:1024px) {
+  .mobile-img img{
+   display: none;
+  }
+  .desktop-img{
+    display: revert;
+  }
+}
 .content{
   margin:0 25px;
+}
+
+@media screen and (min-width:1024px) {
+  .content{
+    margin:24px;
+  } 
 }
 .perfume{
   color: var(--Dark-grayish-blue);
@@ -39,6 +62,11 @@ main{
   text-transform: uppercase;
   padding-block-start: 0.5rem;
   padding-block-end: 0.5rem;
+}
+@media screen and (min-width:1024px) {
+  .perfume{
+    padding-block: 0
+  }
 }
 .content h1{
   color: var(--Very-dark-blue);
@@ -48,15 +76,30 @@ main{
   font-size: 2.1rem;
   padding-block-end: 1rem;
 }
+@media screen and (min-width:1024px) {
+  .content h1{
+    padding-block-start: 1.5rem;
+  }
+}
 .sub-text{
   color: var(--Dark-grayish-blue);
   font-size: 0.9rem;
   line-height: 1.3rem;
   padding-block-end: 0.5rem;
 }
+@media screen and (min-width:1024px) {
+  .sub-text{
+    padding-block: 1.5rem
+  }
+}
 .price{
   display: flex;
   margin-block-end: 1rem;
+}
+@media screen and (min-width:1024px) {
+  .price{
+    margin-block-end: 1rem;
+  }
 }
 .price1{
   color: var(--Dark-cyan);
@@ -72,6 +115,7 @@ main{
   padding-inline-start: 1rem ;
 }
 button{
+  cursor: pointer;
   text-align: center;
   width: 100%;
   padding: 10px 0;
@@ -80,6 +124,9 @@ button{
   border: none;
   border-radius: 5px;
   margin-block-end: 20px;
+}
+button:hover{
+  background-color: var(--Dark-green);
 }
  footer, a{
   text-align: center;
