--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,14 @@ main{
   }
   .desktop-img{
     display: revert;
+    width: 300px;
+    height: 454px;
+  }
+  .desktop-img img{
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    width:100%;      
+    height:100%;
   }
 }
 .content{
